--- a/applaunchconfig.yml
+++ b/applaunchconfig.yml
@@ -52,7 +52,6 @@ Resources:
 
 # web app launch configuration
 # user role for S3 is a IAM role created just for this project
-# echo "Project app server started @8080" > index.html 
   WebAppLaunchConfig:
       Type: AWS::AutoScaling::LaunchConfiguration
       Properties:
@@ -77,7 +76,7 @@ Resources:
           Ebs:
             VolumeSize: '10'
 
-# autoscaling group
+# Autoscaling group
 
   WebAppGroup:
       Type: AWS::AutoScaling::AutoScalingGroup
@@ -92,7 +91,7 @@ Resources:
         TargetGroupARNs:
         - Ref: WebAppTargetGroup        
 
-# load balancer for web app
+# Load balancer for web app
 
   WebAppLB:
       Type: AWS::ElasticLoadBalancingV2::LoadBalancer
@@ -119,14 +118,14 @@ Resources:
         Actions:
         - Type: forward
           TargetGroupArn: !Ref 'WebAppTargetGroup'
-        Condition:./
+        Conditions:
         - Field: path-pattern
           Values: [/]
         ListenerArn: !Ref 'Listener'
         Priority: 1
 
-# we target group for loadbalancer please note that port is 80 becasue AWS ubunto is by defaulting 80 not 8080
-# 
+
+# Target group for loadbalancer .(port is 80 becasue AWS ubunto is by defaulting 80 not 8080)
   WebAppTargetGroup:
       Type: AWS::ElasticLoadBalancingV2::TargetGroup
       Properties:
@@ -142,42 +141,7 @@ Resources:
           Fn::ImportValue:
             Fn::Sub: "${EnvironmentName}-VPCID"        
 
-
-# CloudFront for a simple URL   ( not part of project but just to try this out as per my design )
-# after running the script go to cloud front in consul to get URL
-# the actual project is inside udagram folder so udagram/index.html  otherwise default apache/ubunto page will be shown
-
-  CloudFrontDistribution:
-    Type: AWS::CloudFront::Distribution
-    Properties:
-      DistributionConfig:
-        Origins:
-          - DomainName: !GetAtt [WebAppLB, DNSName]
-            Id: !GetAtt [WebAppLB, DNSName]
-            CustomOriginConfig:
-              HTTPPort: 80
-              OriginProtocolPolicy: http-only
-        Enabled: 'true'
-        DefaultRootObject: udagram/index.html
-        Restrictions:
-          GeoRestriction:
-            RestrictionType: none
-            Locations: []
-        DefaultCacheBehavior:
-          AllowedMethods: [HEAD, GET]
-          MinTTL: '0'
-          MaxTTL: '0'
-          DefaultTTL: '0'
-          TargetOriginId: !GetAtt [WebAppLB, DNSName]
-          SmoothStreaming: 'false'
-          ForwardedValues:
-            QueryString: 'true'
-          ViewerProtocolPolicy: allow-all
-        ViewerCertificate:
-          CloudFrontDefaultCertificate: 'true'
-
-# output for adding HTTP in the final load balancer URL
-# this si just for project requirement / i ahve configured a cloud front url for the actual site
+# Output for adding HTTP in the final load balancer URL
 
 Outputs:
   WebsiteURL:
