--- a/applaunchconfig.yml
+++ b/applaunchconfig.yml
@@ -64,7 +64,7 @@ Resources:
             systemctl start apache2.service
             cd /var/www/html
             aws s3 cp s3://durgaudagramp2/udagram.zip .
-            unzip -o udagram.zip            
+            unzip -o udagram.zip                       
         ImageId: ami-0ac73f33a1888c64a
         IamInstanceProfile:
           Fn::ImportValue: !Sub '${EnvironmentName}-IAM-ROLE'
@@ -141,9 +141,40 @@ Resources:
           Fn::ImportValue:
             Fn::Sub: "${EnvironmentName}-VPCID"        
 
-# Output for adding HTTP in the final load balancer URL
+# CloudFront for a simple URL   
+
+  CloudFrontDistribution:
+    Type: AWS::CloudFront::Distribution
+    Properties:
+      DistributionConfig:
+        Origins:
+          - DomainName: !GetAtt [WebAppLB, DNSName]
+            Id: !GetAtt [WebAppLB, DNSName]
+            CustomOriginConfig:
+              HTTPPort: 80
+              OriginProtocolPolicy: http-only
+        Enabled: 'true'
+        DefaultRootObject: index.html
+        Restrictions:
+          GeoRestriction:
+            RestrictionType: none
+            Locations: []
+        DefaultCacheBehavior:
+          AllowedMethods: [HEAD, GET]
+          MinTTL: '0'
+          MaxTTL: '0'
+          DefaultTTL: '0'
+          TargetOriginId: !GetAtt [WebAppLB, DNSName]
+          SmoothStreaming: 'false'
+          ForwardedValues:
+            QueryString: 'true'
+          ViewerProtocolPolicy: allow-all
+        ViewerCertificate:
+          CloudFrontDefaultCertificate: 'true'
+
+# output for adding HTTP in the final load balancer URL
 
 Outputs:
   WebsiteURL:
-    Value: !Join [ "", [ "http://", !GetAtt WebAppLB.DNSName ,"/udagram"] ]
+    Value: !Join [ "", [ "http://", !GetAtt WebAppLB.DNSName ] ]
     Description: Application URL
